# telegram-ai-assistant

./: .env.example  .geminiignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  used_imgs.txt
.github/workflows/: ci.yml
deploy/: DEPLOYMENT.md  logrotate.mansur-assistant  mansur-assistant.service
docs/: AI_AGENT_PROMPT.md  OPEN_SOURCE_RELEASE.md
examples/content/Calculus/: Calculus_Questions.md
examples/content/Economics/: Exam_Prep.md
scripts/: backup.sh  doctor.py  extract_econ_questions.py  generate_econ_full_8up.py  generate_econ_gallery_8up.py  generate_econ_pdf.py  generate_econ_pdf_4up.py  generate_econ_pdf_compact.py  get_chat_id.py  send_file.py  update_and_restart.sh
src/mansur_bot/: bot.py  config.py
tests/: test_bot_logic.py  test_image_handler.py  test_voice_handler.py
